--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
     "@ngrx/effects": "^11.1.0",
     "@ngrx/store": "^11.1.0",
+    "@ngrx/store-devtools": "^11.1.0",
     "bootstrap": "^4.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
